--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -3,227 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>T2A11 Game Template</title>
+    <title>Maze Game</title>
     <style>
         body {
-            background-repeat: no-repeat; 
-            background-size: cover; 
-            background-image: url('https://i.ibb.co/ggWykJY/cool-desktop-wallpaper-wallpapers-backgrounds-images-art-photos-pictures-free-best-1920x1080-coolwal.jpg');
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
         }
-        h1, h6 {
-            text-align: center;
-            color: white; /* Change text color for visibility */
+        #maze {
+            position: relative;
+            width: 400px;
+            height: 400px;
+            border: 2px solid #333;
+            background-color: #fff;
         }
-        /* Modal styles */
-        .modal {
-            display: none; 
-            position: fixed; 
-            z-index: 999; 
-            left: 0;
-            top: 0;
-            width: 100%; 
-            height: 100%; 
-            overflow: auto; 
-            background-color: rgb(0,0,0); 
-            background-color: rgba(0,0,0,0.4); 
-            padding-top: 100px; 
+        .wall {
+            background-color: #333;
+            position: absolute;
         }
-        .modal-content {
-            background-color: white; 
-            margin: 5% auto; 
-            padding: 20px; 
-            border: 1px solid #888; 
-            width: 80%; 
-            text-align: center; 
-        }
-        #nextPage {
-            background-color: #4CAF50; 
-            color: white; 
-            border: none; 
-            padding: 10px 20px; 
-            cursor: pointer; 
-            font-size: 16px; 
-        }
-        #nextPage:hover {
-            background-color: #45a049; 
+        #player {
+            width: 30px;
+            height: 30px;
+            background-color: red;
+            position: absolute;
         }
     </style>
 </head>
+<body>
 
-<body id="myBody">
+<div id="maze">
+    <div class="wall" style="top: 0; left: 100px; width: 200px; height: 20px;"></div>
+    <div class="wall" style="top: 100px; left: 0; width: 20px; height: 200px;"></div>
+    <div class="wall" style="top: 100px; left: 200px; width: 20px; height: 200px;"></div>
+    <div class="wall" style="top: 300px; left: 100px; width: 200px; height: 20px;"></div>
+    <div id="player" style="top: 0; left: 0;"></div>
+</div>
 
-    <h1>T2A11 Game Template by Fred</h1>
-    <h6>Version 0.0.1</h6>
-    <br><br><br><br>
+<script>
+    const player = document.getElementById('player');
+    const walls = document.querySelectorAll('.wall');
+    const maze = document.getElementById('maze');
 
-    <!-- Modal for losing message -->
-    <div id="lossModal" class="modal">
-        <div class="modal-content">
-            <h2>You Lose</h2>
-            <p>Please click below to proceed to the next page.</p>
-            <button id="nextPage" onclick="goToNextPage()">Next Page</button>
-        </div>
-    </div>
+    let playerPos = { x: 0, y: 0 };
 
-    <script>
-        // Global movement flags
-        let moveImg1 = { left: false, up: false, right: false, down: false };
-        let moveImg2 = { left: false, up: false, right: false, down: false };
+    document.addEventListener('keydown', (event) => {
+        let newX = playerPos.x;
+        let newY = playerPos.y;
 
-        // Speed for movement
-        const speed = 5;
-        
-        // Background movement variables
-        let moveBackground = false;
-        let myGlobalX = 0;
+        if (event.key === 'ArrowUp') newY -= 30;
+        if (event.key === 'ArrowDown') newY += 30;
+        if (event.key === 'ArrowLeft') newX -= 30;
+        if (event.key === 'ArrowRight') newX += 30;
 
-        // Function to check if two elements are colliding
-        function myHitOther(my1, my2) {
-            let left1 = parseInt(document.getElementById(my1).style.left);
-            let right1 = left1 + parseInt(document.getElementById(my1).style.width);
-            let top1 = parseInt(document.getElementById(my1).style.top);
-            let bottom1 = top1 + parseInt(document.getElementById(my1).style.height);
-            let left2 = parseInt(document.getElementById(my2).style.left);
-            let right2 = left2 + parseInt(document.getElementById(my2).style.width);
-            let top2 = parseInt(document.getElementById(my2).style.top);
-            let bottom2 = top2 + parseInt(document.getElementById(my2).style.height);
-            return (right1 >= left2 && bottom1 >= top2 && left1 <= right2 && top1 <= bottom2);
+        if (!isColliding(newX, newY)) {
+            playerPos = { x: newX, y: newY };
+            updatePlayerPosition();
         }
+    });
 
-        // Function to check for collisions
-        function myCheckHit() {
-            if (myHitOther('myImg01', 'myImg02')) {
-                showLossModal();
-                document.getElementById('myImg01').style.left = '20px';
+    function isColliding(x, y) {
+        // Check collision with walls
+        const playerBounds = { left: x, top: y, right: x + 30, bottom: y + 30 };
+        for (let wall of walls) {
+            const wallBounds = wall.getBoundingClientRect();
+            if (playerBounds.right > wallBounds.left &&
+                playerBounds.left < wallBounds.right &&
+                playerBounds.bottom > wallBounds.top &&
+                playerBounds.top < wallBounds.bottom) {
+                return true;
             }
         }
+        return false;
+    }
 
-        // Function to move images based on movement flags
-        function moveImages() {
-            const img1 = document.getElementById('myImg01');
-            const img2 = document.getElementById('myImg02');
-
-            // Move myImg01 (Greninja) based on flags
-            if (moveImg1.left) img1.style.left = (parseInt(img1.style.left) - speed) + 'px';
-            if (moveImg1.up) img1.style.top = (parseInt(img1.style.top) - speed) + 'px';
-            if (moveImg1.right) img1.style.left = (parseInt(img1.style.left) + speed) + 'px';
-            if (moveImg1.down) img1.style.top = (parseInt(img1.style.top) + speed) + 'px';
-
-            // Move myImg02 (Charizard) based on flags
-            if (moveImg2.left) img2.style.left = (parseInt(img2.style.left) - speed) + 'px';
-            if (moveImg2.up) img2.style.top = (parseInt(img2.style.top) - speed) + 'px';
-            if (moveImg2.right) img2.style.left = (parseInt(img2.style.left) + speed) + 'px';
-            if (moveImg2.down) img2.style.top = (parseInt(img2.style.top) + speed) + 'px';
-
-            // Move background if the flag is set
-            if (moveBackground) {
-                myGlobalX += 5;  // Move background to the left
-                document.getElementById('myBody').style.backgroundPosition = myGlobalX + 'px 0px';
-            }
-
-            myCheckHit(); // Check for collisions
-        }
-
-        // Set interval to regularly move images and background
-        setInterval(moveImages, 100);
-
-        // Keydown event listener for movement
-        document.addEventListener('keydown', function(event) {
-            switch (event.key) {
-                case 'ArrowLeft':
-                    moveImg1.left = true;
-                    break;
-                case 'ArrowUp':
-                    moveImg1.up = true;
-                    break;
-                case 'ArrowRight':
-                    moveImg1.right = true;
-                    break;
-                case 'ArrowDown':
-                    moveImg1.down = true;
-                    break;
-                case 'a':
-                    moveImg2.left = true;
-                    break;
-                case 'w':
-                    moveImg2.up = true;
-                    break;
-                case 'd':
-                    moveImg2.right = true;
-                    break;
-                case 's':
-                    moveImg2.down = true;
-                    break;
-            }
-        });
-
-        // Keyup event listener to stop movement when key is released
-        document.addEventListener('keyup', function(event) {
-            switch (event.key) {
-                case 'ArrowLeft':
-                    moveImg1.left = false;
-                    break;
-                case 'ArrowUp':
-                    moveImg1.up = false;
-                    break;
-                case 'ArrowRight':
-                    moveImg1.right = false;
-                    break;
-                case 'ArrowDown':
-                    moveImg1.down = false;
-                    break;
-                case 'a':
-                    moveImg2.left = false;
-                    break;
-                case 'w':
-                    moveImg2.up = false;
-                    break;
-                case 'd':
-                    moveImg2.right = false;
-                    break;
-                case 's':
-                    moveImg2.down = false;
-                    break;
-            }
-        });
-
-        // Show loss modal
-        function showLossModal() {
-            const modal = document.getElementById('lossModal');
-            modal.style.display = 'block';
-        }
-
-        // Navigate to the next page
-        function goToNextPage() {
-            location.href = 't2a13-keydown.html'; // Replace with your next page URL
-        }
-
-        // Close modal when clicking outside of it
-        window.onclick = function(event) {
-            const modal = document.getElementById('lossModal');
-            if (event.target == modal) {
-                modal.style.display = "none";
-            }
-        }
-
-        // Initialize Charizard's position
-        window.onload = function() {
-            const img2 = document.getElementById('myImg02');
-            img2.style.left = (window.innerWidth - parseInt(img2.style.width) - 50) + 'px'; // start Charizard on the right side of the screen
-            img2.style.top = (Math.random() * (window.innerHeight - parseInt(img2.style.height))) + 'px'; // random vertical position
-        };
-
-    </script>
-
-    <img id="myImg01" style="position:absolute; width:100px; height:80px; top:0px; left:50px;" src="https://i.ibb.co/NtcGP2L/greninja.jpg" alt="Greninja">
-    <img id="myImg02" style="position:absolute; width:100px; height:80px; top:0px; left:0px;" src="https://i.ibb.co/b612Tcx/charizard.jpg" alt="Charizard">
-
-    <input type="button" id="autoBackgroundButton" value="Start Background Movement" onclick="toggleBackgroundMovement()">
-
-    <input type="button" value="Image Right Fast Button" onTouchStart="{this.click(); event.preventDefault();}" onclick="{
-        document.getElementById('myImg01').style.left = parseInt(document.getElementById('myImg01').style.left) + 10 + 'px';
-        myCheckHit(); // Checks for all collisions
-    }"><br><br>
+    function updatePlayerPosition() {
+        player.style.left = `${playerPos.x}px`;
+        player.style.top = `${playerPos.y}px`;
+    }
+</script>
 
 </body>
 </html>
