--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maze Game</title>
+    <title>Large Maze Game</title>
     <style>
         body {
             display: flex;
@@ -16,8 +16,8 @@
         }
         #maze {
             position: relative;
-            width: 400px;
-            height: 400px;
+            width: 600px; /* Increased size */
+            height: 600px; /* Increased size */
             border: 2px solid #333;
             background-color: #fff;
         }
@@ -36,10 +36,18 @@
 <body>
 
 <div id="maze">
-    <div class="wall" style="top: 0; left: 100px; width: 200px; height: 20px;"></div>
-    <div class="wall" style="top: 100px; left: 0; width: 20px; height: 200px;"></div>
-    <div class="wall" style="top: 100px; left: 200px; width: 20px; height: 200px;"></div>
-    <div class="wall" style="top: 300px; left: 100px; width: 200px; height: 20px;"></div>
+    <!-- Maze walls. Adjusted for a larger maze -->
+    <div class="wall" style="top: 0; left: 150px; width: 300px; height: 20px;"></div>
+    <div class="wall" style="top: 100px; left: 0; width: 20px; height: 400px;"></div>
+    <div class="wall" style="top: 100px; left: 300px; width: 20px; height: 300px;"></div>
+    <div class="wall" style="top: 100px; left: 80px; width: 240px; height: 20px;"></div>
+    <div class="wall" style="top: 300px; left: 150px; width: 150px; height: 20px;"></div>
+    <div class="wall" style="top: 300px; left: 450px; width: 20px; height: 200px;"></div>
+    <div class="wall" style="top: 500px; left: 150px; width: 300px; height: 20px;"></div>
+    <div class="wall" style="top: 200px; left: 400px; width: 150px; height: 20px;"></div>
+    <div class="wall" style="top: 200px; left: 250px; width: 20px; height: 200px;"></div>
+    <div class="wall" style="top: 450px; left: 400px; width: 20px; height: 50px;"></div>
+    
     <div id="player" style="top: 0; left: 0;"></div>
 </div>
 
@@ -54,11 +62,13 @@
         let newX = playerPos.x;
         let newY = playerPos.y;
 
+        // Move player with arrow keys
         if (event.key === 'ArrowUp') newY -= 30;
         if (event.key === 'ArrowDown') newY += 30;
         if (event.key === 'ArrowLeft') newX -= 30;
         if (event.key === 'ArrowRight') newX += 30;
 
+        // Check for collision
         if (!isColliding(newX, newY)) {
             playerPos = { x: newX, y: newY };
             updatePlayerPosition();
