--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maze Game</title>
+    <title>Enhanced Maze Game</title>
     <style>
         body {
             display: flex;
@@ -28,22 +28,14 @@
         .wall {
             background-color: #333;
             position: absolute;
-            z-index: 1; 
-        }
-
-        .passable-wall {
-            background-color: #aaa; /* Different color for passable walls */
-            position: absolute;
-            z-index: 1; // Behind the player
         }
 
         #player {
             width: 30px;
             height: 30px;
             background-color: red;
-            border-radius: 50%;
+            border-radius: 50%; 
             position: absolute;
-            z-index: 2; // On top of the walls
         }
 
         #goal {
@@ -51,10 +43,9 @@
             height: 30px;
             background-color: green;
             position: absolute;
-            border-radius: 50%;
-            top: 550px; 
-            left: 750px; 
-            z-index: 2; // On top of the walls
+            top: 560px; 
+            left: 760px; 
+            border-radius: 50%; 
         }
 
         #controls {
@@ -82,26 +73,30 @@
 </div>
 
 <div id="maze" style="display: none;">
-    <!-- Maze layout -->
+    <!-- Enhanced Maze Walls -->
     <div class="wall" style="top: 0; left: 0; width: 800px; height: 20px;"></div>
     <div class="wall" style="top: 0; left: 0; width: 20px; height: 600px;"></div>
     <div class="wall" style="top: 0; left: 780px; width: 20px; height: 600px;"></div>
     <div class="wall" style="top: 580px; left: 0; width: 800px; height: 20px;"></div>
 
-    <!-- Regular walls -->
-    <div class="wall" style="top: 100px; left: 50px; width: 20px; height: 400px;"></div>
-    <div class="wall" style="top: 100px; left: 150px; width: 220px; height: 20px;"></div>
-    <div class="wall" style="top: 120px; left: 350px; width: 20px; height: 100px;"></div>
-    <div class="wall" style="top: 220px; left: 400px; width: 20px; height: 200px;"></div>
-    <div class="wall" style="top: 400px; left: 250px; width: 200px; height: 20px;"></div>
-    <div class="wall" style="top: 400px; left: 450px; width: 20px; height: 100px;"></div>
-    <div class="wall" style="top: 500px; left: 150px; width: 100px; height: 20px;"></div>
-    <div class="wall" style="top: 100px; left: 600px; width: 20px; height: 200px;"></div>
-  
-    <!-- Passable walls -->
-    <div class="passable-wall" style="top: 100px; left: 400px; width: 80px; height: 20px;"></div>
-    <div class="passable-wall" style="top: 150px; left: 500px; width: 80px; height: 20px;"></div>
-    <div class="passable-wall" style="top: 250px; left: 525px; width: 20px; height: 90px;"></div>
+    <!-- Middle walls to create a maze structure -->
+    <div class="wall" style="top: 100px; left: 100px; width: 10px; height: 300px;"></div>
+    <div class="wall" style="top: 100px; left: 300px; width: 10px; height: 200px;"></div>
+    <div class="wall" style="top: 300px; left: 200px; width: 120px; height: 10px;"></div>
+    <div class="wall" style="top: 400px; left: 100px; width: 80px; height: 10px;"></div>
+    <div class="wall" style="top: 400px; left: 230px; width: 10px; height: 100px;"></div>
+    <div class="wall" style="top: 480px; left: 100px; width: 140px; height: 10px;"></div>
+    
+    <div class="wall" style="top: 150px; left: 400px; width: 10px; height: 200px;"></div>
+    <div class="wall" style="top: 200px; left: 450px; width: 150px; height: 10px;"></div>
+    <div class="wall" style="top: 250px; left: 550px; width: 10px; height: 150px;"></div>
+    <div class="wall" style="top: 400px; left: 450px; width: 100px; height: 10px;"></div>
+
+    <div class="wall" style="top: 300px; left: 600px; width: 10px; height: 200px;"></div>
+    <div class="wall" style="top: 500px; left: 450px; width: 160px; height: 10px;"></div);
+    <div class="wall" style="top: 500px; left: 600px; width: 10px; height: 80px;"></div>
+    <div class="wall" style="top: 100px; left: 650px; width: 10px; height: 80px;"></div>
+    <div class="wall" style="top: 180px; left: 300px; width: 350px; height: 10px;"></div>
 
     <div id="goal"></div>
     <div id="player" style="top: 30px; left: 30px;"></div>
@@ -113,7 +108,6 @@
 <script>
     const player = document.getElementById('player');
     const walls = document.querySelectorAll('.wall');
-    const passableWalls = document.querySelectorAll('.passable-wall');
     const goal = document.getElementById('goal');
     const maze = document.getElementById('maze');
     const timerDisplay = document.getElementById('timer');
@@ -174,29 +168,16 @@
 
     function isColliding(x, y) {
         const playerBounds = { left: x, top: y, right: x + 30, bottom: y + 30 };
-        
         for (let wall of walls) {
             const wallBounds = wall.getBoundingClientRect();
             if (playerBounds.right > wallBounds.left &&
                 playerBounds.left < wallBounds.right &&
                 playerBounds.bottom > wallBounds.top &&
                 playerBounds.top < wallBounds.bottom) {
-                return true; // Collision with non-passable wall
+                return true;
             }
         }
-
-        // Allow passing through passable walls
-        for (let wall of passableWalls) {
-            const wallBounds = wall.getBoundingClientRect();
-            if (playerBounds.right > wallBounds.left &&
-                playerBounds.left < wallBounds.right &&
-                playerBounds.bottom > wallBounds.top &&
-                playerBounds.top < wallBounds.bottom) {
-                return false; // No collision with passable wall
-            }
-        }
-
-        return false; // No collision
+        return false;
     }
 
     function updatePlayerPosition() {
@@ -205,7 +186,7 @@
     }
 
     function checkGoal() {
-        if (playerPos.x >= 750 && playerPos.x <= 780 && playerPos.y >= 550 && playerPos.y <= 580) {
+        if (playerPos.x >= 760 && playerPos.x <= 790 && playerPos.y >= 560 && playerPos.y <= 590) {
             alert("You've reached the goal!");
             document.getElementById('winSound').play();
             clearInterval(timer);
